templates/parks-weather/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: parks-weather
  labels:
    app: parks-weather
    app.kubernetes.io/component: parks-weather
    app.kubernetes.io/name: parks-weather
    app.kubernetes.io/part-of: parks
spec:
  to:
    kind: Service
    name: parks-weather
    weight: 100
  port:
    targetPort: 8090-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
